--- a/gateway.yml
+++ b/gateway.yml
@@ -15,6 +15,7 @@ spring:
     gateway:    
       discovery:
         locator:
+          enabled: true
           lower-case-service-id: true
           
 
