--- a/gateway.yml
+++ b/gateway.yml
@@ -17,5 +17,13 @@ spring:
         locator:
           enabled: true
           lower-case-service-id: true
-          
-
+      routes:
+        - id: product-catalog
+          uri: lb://PRODUCT-CATALOG
+          predicates:
+            - Path=/product/**
+        - id: shopping-cart
+          uri: lb://SHOPPING-CART
+          predicates:
+            - Path=/cart/**
+            
